--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#D6B4FC</color>
+    <color name="cobalt">#30D5C8</color>
+    <color name="orange">#FDBD39</color>
+    <color name="flamingo">#F496A1</color>
+    <color name="sapphire">#0F52BA</color>
+
+
 </resources>
