--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Jerodex" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Base.Theme.Jerodex" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="android:windowBackground">@color/purple</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
